# oxidex

./: Cargo.toml  LICENSE  README.md  renovate.json
.cargo/: config.toml
.github/workflows/: publish.yml  release.yml  test.yml
src/: json.rs  lib.rs  toml.rs  xml.rs  yaml.rs
