[package]
name = "oxidex"
version = "0.1.0"

authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library for Context Manipulation and Export"
documentation = "https://docs.rs/oxidex"
edition = "2021"
homepage = "https://github.com/cdumay/oxidex"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/oxidex"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde-value = "0.7.0"
serde_json = { version = "1.0.138", optional = true }
serde_yaml = { version = "0.9.33", optional = true }
toml = { version = "0.8.18", optional = true }
serde-xml-rs = { version = "0.6.0", optional = true }

[features]
json = ['serde_json']
yaml = ["serde_yaml"]
xml = ["serde-xml-rs"]